--- a/modules/FlowInstancePDFGenerator/trunk/src/com/nordicpeak/flowengine/pdf/staticcontent/css/flowinstance.css
+++ b/modules/FlowInstancePDFGenerator/trunk/src/com/nordicpeak/flowengine/pdf/staticcontent/css/flowinstance.css
@@ -122,6 +122,7 @@ p{
 .bigmargin{ margin:10px;}
 .bigmargintop{margin-top: 15px;}
 .bigmarginbottom{margin-bottom: 15px;}
+.xlmarginbottom{margin-bottom: 30px;}
 .bigmarginleft{margin-left: 15px;}
 .bigmarginright{margin-right: 15px;}
 
