- Split shorthand background rule to individual rules for simplebox
git-svn-id: svn://svn.sundsvall.se/oep-dev@2218 fcb98548-a2c4-3c4b-99c6-acc7aeb3bb18

--- a/framework/trunk/src/com/nordicpeak/flowengine/staticcontent/css/flowengine.css
+++ b/framework/trunk/src/com/nordicpeak/flowengine/staticcontent/css/flowengine.css
@@ -824,7 +824,11 @@ aside.narrow + .content.omega {
 }
 
 .simplebox {
-	background: #FFFFFF none repeat scroll 0 0;
+	background-color: #FFFFFF;
+	background-image: none;
+	background-repeat: repeat;
+	background-attachment: scroll;
+	background-position: 0 0;
     position: relative;
     margin-top: 25px;
     margin-bottom: 25px;
@@ -837,7 +841,11 @@ aside.narrow + .content.omega {
 }
 
 .simplebox-title {
-	background: #F1F1F1 none repeat scroll 0 0;
+	background-color: #F1F1F1;
+	background-image: none;
+	background-repeat: repeat;
+	background-attachment: scroll;
+	background-position: 0 0;
     font-size: 20px !important;
     margin: 0 !important;
     padding: 16px 27px !important;
