- Added css styling for header title
git-svn-id: svn://svn.sundsvall.se/oep-dev@2236 fcb98548-a2c4-3c4b-99c6-acc7aeb3bb18

--- a/framework/trunk/src/com/nordicpeak/flowengine/staticcontent/css/userflowinstancemodule.css
+++ b/framework/trunk/src/com/nordicpeak/flowengine/staticcontent/css/userflowinstancemodule.css
@@ -23,6 +23,16 @@
 	padding-bottom: 0;
 }
 
+.userflowinstances .errands-wrapper.header-title {
+	padding-bottom: 0;
+	margin-bottom: 0;
+}
+
+.userflowinstances .errands-wrapper > h1 {
+	padding: 10px 0 0px 0;
+	font-size: 22px;
+}
+
 /* ========== MOBILE ========== */
 @media screen and (max-width: 767px) {
   .tabs {
